--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-owl-carousel2": "^0.3.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "simple-react-lightbox": "^3.6.9-0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
