--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "creativedesigns",
   "version": "0.1.0",
+  "homepage": "https://brandwithbala.com/creativedesigns/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
@@ -12,7 +13,7 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-owl-carousel2": "^0.3.0",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "simple-react-lightbox": "^3.6.9-0",
     "web-vitals": "^1.1.2"
